# sample-mcp-tool-design-patterns

./: .gitignore  README.md  anycompany_content.db  mock_bff_sqlite.py  pyproject.toml  seed_anycompany_content_sqlite.sql  v1_passthrough.py  v2_better_descriptions.py  v3_rethought_schema.py  v4_lazy_loading.py  v5_llm_introspect.py
scripts/: setup_agents.py  start_all.sh  stop_all.sh
v6/: AGENTS.md  README.md
v6/agentcore/: agentcore.json
v6/agentcore/cdk/: README.md  package-lock.json  package.json
v6/app/v6/: README.md  main.py  mock_bff_sqlite.py  pyproject.toml
v6/app/v6/model/: load.py
