[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-tool-optimization-patterns"
version = "0.1.0"
description = "MCP tool design patterns — companion code for AWS ML Blog"
requires-python = ">=3.13"
dependencies = [
    "mcp >= 1.19.0",
    "aiosqlite",
    "strands-agents >= 1.13.0",
    "boto3",
    "pydantic",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff.lint]
extend-select = ["I"]

[tool.bandit]
exclude_dirs = [".venv"]
