[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "v6"
version = "0.1.0"
description = "AgentCore MCP Server — Strands agent behind a single MCP tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aws-opentelemetry-distro",
    "mcp >= 1.19.0",
    "strands-agents >= 1.13.0",
    "boto3",
    "aiosqlite",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
